--- a/src/modules/styles.scss
+++ b/src/modules/styles.scss
@@ -9,7 +9,11 @@
   align-items: center;
   flex-direction: column;
 
-  .button {
+  .controls {
     margin-top: 20px;
+  }
+
+  .statusBar {
+    margin-bottom: 20px;
   }
 }
