--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,6 +10,10 @@ html, body {
   line-height: 1.5;
 }
 
+input {
+  font-family: 'Open Sans', sans-serif;
+}
+
 a {
   text-decoration: none;
   cursor: pointer;
