--- a/src/modules/status-bar/styles.scss
+++ b/src/modules/status-bar/styles.scss
@@ -1,3 +1,14 @@
 .status-bar {
+  display: flex;
+  justify-content: space-between;
 
+  .player-name {
+    .name {
+      font-weight: bold;
+    }
+  }
+
+  .message {
+
+  }
 }
