--- a/src/modules/styles.scss
+++ b/src/modules/styles.scss
@@ -1,9 +1,8 @@
 .app {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
+  height: 100%;
+}
+
+.sidebar-content {
   display: flex;
   justify-content: center;
   align-items: center;
