Introducing GameState model

--- a/src/modules/controls/styles.scss
+++ b/src/modules/controls/styles.scss
@@ -1,3 +1,13 @@
 .controls {
-  display: block;
+  .button {
+    margin: 20px 0;
+
+    &:first-child {
+      margin-top: 0;
+    }
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
 }
