--- a/src/components/button/styles.scss
+++ b/src/components/button/styles.scss
@@ -1,7 +1,7 @@
 .button {
+  @include clickable-effects();
+
   padding: 6px 30px;
-  background: #333;
-  color: white;
   font-size: 16px;
   text-transform: uppercase;
   text-align: center;
@@ -10,11 +10,9 @@
   cursor: pointer;
   user-select: none;
 
-  &:hover {
-    background: #444;
-  }
-
-  &:active {
-    background: #222;
+  &.disabled {
+    background-color: $background-disabled;
+    color: $primary-disabled;
+    pointer-events: none;
   }
 }
