--- a/src/modules/styles.scss
+++ b/src/modules/styles.scss
@@ -1,3 +1,5 @@
+$spacing: 20px;
+
 .app {
   height: 100%;
 }
@@ -14,16 +16,14 @@
 }
 
 .top {
-  .status-bar {
-    margin-bottom: 20px;
-  }
+  margin-bottom: $spacing;
 }
 
-.bottom {
+.middle {
   display: flex;
 
   .game {
-    margin-right: 20px;
+    margin-right: $spacing;
   }
 
   .controls-and-settings {
@@ -34,8 +34,11 @@
     }
 
     .controls {
-      margin-bottom: 20px;
+      margin-bottom: $spacing;
     }
   }
 }
 
+.bottom {
+  margin-top: $spacing;
+}
