--- a/src/modules/player-names/styles.scss
+++ b/src/modules/player-names/styles.scss
@@ -3,12 +3,12 @@
   font-size: 24px;
   font-weight: bold;
 
-  .left, .right {
+  .name {
     @include ellipsis();
 
-    flex: 1 0 50%;
+    flex: 0 0 50%;
     border-bottom: 1px solid $primary;
-    transition: border-color $micro-animation-duration;
+    transition: border-bottom-color $micro-animation-duration;
 
     &.disabled {
       color: $primary-disabled;
@@ -18,20 +18,10 @@
 
   .left {
     padding-right: 10px;
-    border-right: 10px solid $primary;
-
-    &.disabled {
-      border-right-color: transparent;
-    }
   }
 
   .right {
     padding-left: 10px;
-    border-left: 10px solid $primary;
     text-align: right;
-
-    &.disabled {
-      border-left-color: transparent;
-    }
   }
 }
