--- a/src/modules/status-bar/styles.scss
+++ b/src/modules/status-bar/styles.scss
@@ -1,14 +1,4 @@
 .status-bar {
-  display: flex;
-  justify-content: space-between;
-
-  .player-name {
-    .name {
-      font-weight: bold;
-    }
-  }
-
-  .message {
-
-  }
+  text-align: center;
+  padding: 10px 0;
 }
